--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "node": "14.x"
   },
   "scripts": {
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,json,mustache ./src/server.ts",
     "start": "node dist/server.js",
-    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/"
+    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,8 @@
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.16.2"
+    "sequelize": "^6.16.2",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
