--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": "14.x"
   },
   "scripts": {
+    "start": "node dist/server.js",
+    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon -e ts,json,mustache ./src/server.ts",
-    "start": "node dist/server.js",
-    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/"
+    "start-dev": "nodemon -e ts,json,mustache ./src/server.ts"
   },
   "keywords": [],
   "author": "",
